--- a/_notebooks/2021-12-04-데시_기말ver0.1.ipynb
+++ b/_notebooks/2021-12-04-데시_기말ver0.1.ipynb
@@ -114,7 +114,7 @@
        "      <th>구분</th>\n",
        "      <th colspan=\"2\" halign=\"left\">1차접종</th>\n",
        "      <th colspan=\"2\" halign=\"left\">2차접종</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">3차(부스터)접종</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">3차접종</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
@@ -131,208 +131,208 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>합계</td>\n",
-       "      <td>37490</td>\n",
-       "      <td>42774131</td>\n",
-       "      <td>41901</td>\n",
-       "      <td>41455846</td>\n",
-       "      <td>289494</td>\n",
-       "      <td>4538521</td>\n",
+       "      <td>54184</td>\n",
+       "      <td>43104019</td>\n",
+       "      <td>43060</td>\n",
+       "      <td>41807882</td>\n",
+       "      <td>787801</td>\n",
+       "      <td>7937480</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>서울</td>\n",
-       "      <td>6319</td>\n",
-       "      <td>7962979</td>\n",
-       "      <td>6866</td>\n",
-       "      <td>7743802</td>\n",
-       "      <td>54225</td>\n",
-       "      <td>849830</td>\n",
+       "      <td>8483</td>\n",
+       "      <td>8020048</td>\n",
+       "      <td>6705</td>\n",
+       "      <td>7805297</td>\n",
+       "      <td>139233</td>\n",
+       "      <td>1489010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>부산</td>\n",
-       "      <td>2505</td>\n",
-       "      <td>2733624</td>\n",
-       "      <td>2719</td>\n",
-       "      <td>2646492</td>\n",
-       "      <td>19478</td>\n",
-       "      <td>271399</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>2757462</td>\n",
+       "      <td>3224</td>\n",
+       "      <td>2670259</td>\n",
+       "      <td>58699</td>\n",
+       "      <td>509902</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>대구</td>\n",
-       "      <td>2064</td>\n",
-       "      <td>1902985</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>1840853</td>\n",
-       "      <td>11067</td>\n",
-       "      <td>168038</td>\n",
+       "      <td>2824</td>\n",
+       "      <td>1918142</td>\n",
+       "      <td>2147</td>\n",
+       "      <td>1856244</td>\n",
+       "      <td>30643</td>\n",
+       "      <td>297445</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>인천</td>\n",
-       "      <td>2177</td>\n",
-       "      <td>2440776</td>\n",
-       "      <td>2693</td>\n",
-       "      <td>2364488</td>\n",
-       "      <td>15494</td>\n",
-       "      <td>236545</td>\n",
+       "      <td>2772</td>\n",
+       "      <td>2458922</td>\n",
+       "      <td>2404</td>\n",
+       "      <td>2384813</td>\n",
+       "      <td>40491</td>\n",
+       "      <td>426391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>광주</td>\n",
-       "      <td>1146</td>\n",
-       "      <td>1194535</td>\n",
-       "      <td>1557</td>\n",
-       "      <td>1152363</td>\n",
-       "      <td>6653</td>\n",
-       "      <td>130852</td>\n",
+       "      <td>1713</td>\n",
+       "      <td>1204447</td>\n",
+       "      <td>1685</td>\n",
+       "      <td>1164710</td>\n",
+       "      <td>23536</td>\n",
+       "      <td>215904</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>대전</td>\n",
-       "      <td>1174</td>\n",
-       "      <td>1178105</td>\n",
-       "      <td>1113</td>\n",
-       "      <td>1139127</td>\n",
-       "      <td>7576</td>\n",
-       "      <td>117142</td>\n",
+       "      <td>1844</td>\n",
+       "      <td>1187726</td>\n",
+       "      <td>1555</td>\n",
+       "      <td>1149300</td>\n",
+       "      <td>20177</td>\n",
+       "      <td>202449</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>울산</td>\n",
-       "      <td>838</td>\n",
-       "      <td>911763</td>\n",
-       "      <td>839</td>\n",
-       "      <td>884482</td>\n",
-       "      <td>4300</td>\n",
-       "      <td>72776</td>\n",
+       "      <td>1410</td>\n",
+       "      <td>919495</td>\n",
+       "      <td>866</td>\n",
+       "      <td>890888</td>\n",
+       "      <td>15672</td>\n",
+       "      <td>135302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>세종</td>\n",
-       "      <td>245</td>\n",
-       "      <td>273588</td>\n",
-       "      <td>223</td>\n",
-       "      <td>263413</td>\n",
-       "      <td>1160</td>\n",
-       "      <td>26801</td>\n",
+       "      <td>374</td>\n",
+       "      <td>276403</td>\n",
+       "      <td>321</td>\n",
+       "      <td>266137</td>\n",
+       "      <td>3831</td>\n",
+       "      <td>44602</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>경기</td>\n",
-       "      <td>10012</td>\n",
-       "      <td>11200429</td>\n",
-       "      <td>10301</td>\n",
-       "      <td>10864754</td>\n",
-       "      <td>72498</td>\n",
-       "      <td>1121386</td>\n",
+       "      <td>12932</td>\n",
+       "      <td>11285264</td>\n",
+       "      <td>9217</td>\n",
+       "      <td>10946077</td>\n",
+       "      <td>173172</td>\n",
+       "      <td>1925100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>강원</td>\n",
-       "      <td>1167</td>\n",
-       "      <td>1283451</td>\n",
-       "      <td>1551</td>\n",
-       "      <td>1244496</td>\n",
-       "      <td>11244</td>\n",
-       "      <td>151662</td>\n",
+       "      <td>1717</td>\n",
+       "      <td>1292805</td>\n",
+       "      <td>1638</td>\n",
+       "      <td>1256039</td>\n",
+       "      <td>28893</td>\n",
+       "      <td>271703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>충북</td>\n",
-       "      <td>1030</td>\n",
-       "      <td>1356199</td>\n",
-       "      <td>1319</td>\n",
-       "      <td>1314910</td>\n",
-       "      <td>9180</td>\n",
-       "      <td>155134</td>\n",
+       "      <td>1593</td>\n",
+       "      <td>1365516</td>\n",
+       "      <td>1479</td>\n",
+       "      <td>1325872</td>\n",
+       "      <td>26614</td>\n",
+       "      <td>265445</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>충남</td>\n",
-       "      <td>1383</td>\n",
-       "      <td>1795635</td>\n",
-       "      <td>1620</td>\n",
-       "      <td>1735707</td>\n",
-       "      <td>12957</td>\n",
-       "      <td>211573</td>\n",
+       "      <td>2250</td>\n",
+       "      <td>1809005</td>\n",
+       "      <td>2064</td>\n",
+       "      <td>1752184</td>\n",
+       "      <td>36225</td>\n",
+       "      <td>365771</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>전북</td>\n",
-       "      <td>1157</td>\n",
-       "      <td>1519147</td>\n",
-       "      <td>1938</td>\n",
-       "      <td>1471314</td>\n",
-       "      <td>13110</td>\n",
-       "      <td>200868</td>\n",
+       "      <td>2072</td>\n",
+       "      <td>1531118</td>\n",
+       "      <td>1705</td>\n",
+       "      <td>1488334</td>\n",
+       "      <td>39020</td>\n",
+       "      <td>356320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>전남</td>\n",
-       "      <td>1066</td>\n",
-       "      <td>1579577</td>\n",
-       "      <td>1460</td>\n",
-       "      <td>1529245</td>\n",
-       "      <td>13935</td>\n",
-       "      <td>243073</td>\n",
+       "      <td>1870</td>\n",
+       "      <td>1590099</td>\n",
+       "      <td>1799</td>\n",
+       "      <td>1544293</td>\n",
+       "      <td>39305</td>\n",
+       "      <td>390707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>경북</td>\n",
-       "      <td>1949</td>\n",
-       "      <td>2167095</td>\n",
-       "      <td>2069</td>\n",
-       "      <td>2096662</td>\n",
-       "      <td>14921</td>\n",
-       "      <td>241872</td>\n",
+       "      <td>3007</td>\n",
+       "      <td>2182756</td>\n",
+       "      <td>2401</td>\n",
+       "      <td>2113629</td>\n",
+       "      <td>47067</td>\n",
+       "      <td>429860</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>경남</td>\n",
-       "      <td>2502</td>\n",
-       "      <td>2722086</td>\n",
-       "      <td>2895</td>\n",
-       "      <td>2630748</td>\n",
-       "      <td>18406</td>\n",
-       "      <td>285384</td>\n",
+       "      <td>4388</td>\n",
+       "      <td>2747064</td>\n",
+       "      <td>3234</td>\n",
+       "      <td>2656146</td>\n",
+       "      <td>55766</td>\n",
+       "      <td>518898</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>제주</td>\n",
-       "      <td>756</td>\n",
-       "      <td>552157</td>\n",
-       "      <td>723</td>\n",
-       "      <td>532990</td>\n",
-       "      <td>3290</td>\n",
-       "      <td>54186</td>\n",
+       "      <td>911</td>\n",
+       "      <td>557747</td>\n",
+       "      <td>616</td>\n",
+       "      <td>537660</td>\n",
+       "      <td>9457</td>\n",
+       "      <td>92671</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    구분   1차접종             2차접종           3차(부스터)접종         \n",
-       "    구분  당일 실적     당일 누계  당일 실적     당일 누계     당일 실적    당일 누계\n",
-       "0   합계  37490  42774131  41901  41455846    289494  4538521\n",
-       "1   서울   6319   7962979   6866   7743802     54225   849830\n",
-       "2   부산   2505   2733624   2719   2646492     19478   271399\n",
-       "3   대구   2064   1902985   2015   1840853     11067   168038\n",
-       "4   인천   2177   2440776   2693   2364488     15494   236545\n",
-       "5   광주   1146   1194535   1557   1152363      6653   130852\n",
-       "6   대전   1174   1178105   1113   1139127      7576   117142\n",
-       "7   울산    838    911763    839    884482      4300    72776\n",
-       "8   세종    245    273588    223    263413      1160    26801\n",
-       "9   경기  10012  11200429  10301  10864754     72498  1121386\n",
-       "10  강원   1167   1283451   1551   1244496     11244   151662\n",
-       "11  충북   1030   1356199   1319   1314910      9180   155134\n",
-       "12  충남   1383   1795635   1620   1735707     12957   211573\n",
-       "13  전북   1157   1519147   1938   1471314     13110   200868\n",
-       "14  전남   1066   1579577   1460   1529245     13935   243073\n",
-       "15  경북   1949   2167095   2069   2096662     14921   241872\n",
-       "16  경남   2502   2722086   2895   2630748     18406   285384\n",
-       "17  제주    756    552157    723    532990      3290    54186"
+       "    구분   1차접종             2차접종              3차접종         \n",
+       "    구분  당일 실적     당일 누계  당일 실적     당일 누계   당일 실적    당일 누계\n",
+       "0   합계  54184  43104019  43060  41807882  787801  7937480\n",
+       "1   서울   8483   8020048   6705   7805297  139233  1489010\n",
+       "2   부산   4024   2757462   3224   2670259   58699   509902\n",
+       "3   대구   2824   1918142   2147   1856244   30643   297445\n",
+       "4   인천   2772   2458922   2404   2384813   40491   426391\n",
+       "5   광주   1713   1204447   1685   1164710   23536   215904\n",
+       "6   대전   1844   1187726   1555   1149300   20177   202449\n",
+       "7   울산   1410    919495    866    890888   15672   135302\n",
+       "8   세종    374    276403    321    266137    3831    44602\n",
+       "9   경기  12932  11285264   9217  10946077  173172  1925100\n",
+       "10  강원   1717   1292805   1638   1256039   28893   271703\n",
+       "11  충북   1593   1365516   1479   1325872   26614   265445\n",
+       "12  충남   2250   1809005   2064   1752184   36225   365771\n",
+       "13  전북   2072   1531118   1705   1488334   39020   356320\n",
+       "14  전남   1870   1590099   1799   1544293   39305   390707\n",
+       "15  경북   3007   2182756   2401   2113629   47067   429860\n",
+       "16  경남   4388   2747064   3234   2656146   55766   518898\n",
+       "17  제주    911    557747    616    537660    9457    92671"
       ]
      },
      "execution_count": 2,
@@ -400,87 +400,87 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>서울</td>\n",
-       "      <td>7743802</td>\n",
+       "      <td>7805297</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>부산</td>\n",
-       "      <td>2646492</td>\n",
+       "      <td>2670259</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>대구</td>\n",
-       "      <td>1840853</td>\n",
+       "      <td>1856244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>인천</td>\n",
-       "      <td>2364488</td>\n",
+       "      <td>2384813</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>광주</td>\n",
-       "      <td>1152363</td>\n",
+       "      <td>1164710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>대전</td>\n",
-       "      <td>1139127</td>\n",
+       "      <td>1149300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>울산</td>\n",
-       "      <td>884482</td>\n",
+       "      <td>890888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>세종</td>\n",
-       "      <td>263413</td>\n",
+       "      <td>266137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>경기</td>\n",
-       "      <td>10864754</td>\n",
+       "      <td>10946077</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>강원</td>\n",
-       "      <td>1244496</td>\n",
+       "      <td>1256039</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>충북</td>\n",
-       "      <td>1314910</td>\n",
+       "      <td>1325872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>충남</td>\n",
-       "      <td>1735707</td>\n",
+       "      <td>1752184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>전북</td>\n",
-       "      <td>1471314</td>\n",
+       "      <td>1488334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>전남</td>\n",
-       "      <td>1529245</td>\n",
+       "      <td>1544293</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>경북</td>\n",
-       "      <td>2096662</td>\n",
+       "      <td>2113629</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>경남</td>\n",
-       "      <td>2630748</td>\n",
+       "      <td>2656146</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>제주</td>\n",
-       "      <td>532990</td>\n",
+       "      <td>537660</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -488,23 +488,23 @@
       ],
       "text/plain": [
        "   (구분, 구분)      2차접종\n",
-       "0        서울   7743802\n",
-       "1        부산   2646492\n",
-       "2        대구   1840853\n",
-       "3        인천   2364488\n",
-       "4        광주   1152363\n",
-       "5        대전   1139127\n",
-       "6        울산    884482\n",
-       "7        세종    263413\n",
-       "8        경기  10864754\n",
-       "9        강원   1244496\n",
-       "10       충북   1314910\n",
-       "11       충남   1735707\n",
-       "12       전북   1471314\n",
-       "13       전남   1529245\n",
-       "14       경북   2096662\n",
-       "15       경남   2630748\n",
-       "16       제주    532990"
+       "0        서울   7805297\n",
+       "1        부산   2670259\n",
+       "2        대구   1856244\n",
+       "3        인천   2384813\n",
+       "4        광주   1164710\n",
+       "5        대전   1149300\n",
+       "6        울산    890888\n",
+       "7        세종    266137\n",
+       "8        경기  10946077\n",
+       "9        강원   1256039\n",
+       "10       충북   1325872\n",
+       "11       충남   1752184\n",
+       "12       전북   1488334\n",
+       "13       전남   1544293\n",
+       "14       경북   2113629\n",
+       "15       경남   2656146\n",
+       "16       제주    537660"
       ]
      },
      "execution_count": 5,
@@ -702,7 +702,7 @@
     {
      "data": {
       "text/plain": [
-       "<folium.features.Choropleth at 0x7f84c81b3c10>"
+       "<folium.features.Choropleth at 0x7fa8f2bc6340>"
       ]
      },
      "execution_count": 15,
@@ -2873,7 +2873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "3d4d5d99-9f62-4d57-b861-8e10e2858c63",
    "metadata": {
     "id": "3d4d5d99-9f62-4d57-b861-8e10e2858c63",
@@ -2990,7 +2990,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3076,7 +3076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "04a0d467-d5ce-4372-bbea-2ef71693e6f9",
    "metadata": {},
    "outputs": [
@@ -3086,7 +3086,7 @@
        "Index(['prov', 'pop', 'ym', 'confirmed', 'prop'], dtype='object')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
