--- a/_notebooks/2021-12-16-git.ipynb
+++ b/_notebooks/2021-12-16-git.ipynb
@@ -40,7 +40,9 @@
     "    - 기간 무한으로 설정\n",
     "    - \"redo\", \"workflow\", \"read:org\" ckeck 혹은 모두 ckeck\n",
     "    - Generate token 클릭, `토큰 복사`\n",
-    "- Tip: you can generate a Personal Access Token here https://github.com/settings/tokens The minimum required scopes are 'repo', 'read:org', 'workflow'. ? Paste your authentication token: `복사한 토큰 입력`\n",
+    "- Tip: you can generate a Personal Access Token here https://github.com/settings/tokens\n",
+    "    - The minimum required scopes are 'repo', 'read:org', 'workflow'. \n",
+    "    - ? Paste your authentication token: `복사한 토큰 입력`\n",
     "-gh config set -h github.com git_protocol https ✓ Configured git protocol ✓ Logged in as \"blog name\" 메세지 확인"
    ]
   },
