--- a/_notebooks/2021-12-21-생통toe.ipynb
+++ b/_notebooks/2021-12-21-생통toe.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
    "metadata": {},
    "source": [
     "- 연구의 마지막 달인 12월 부분만 추출하여 treatment 별 barplot을 그려보았다.\n",
-    "- terbinane이 itraconazole보다 평균이 작은 모습을 볼 수 있었다."
+    "- terbinane이 itraconazole보다 비교적 길이가 작은 모습을 볼 수 있었다."
    ]
   },
   {
@@ -667,7 +667,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 기저 효과를 제거하여 고려해보니 boxplot에서 두 치료군 간 평균이 비슷해보인다."
+    "- 기저 효과를 제거하여 고려해보니 boxplot에서 두 치료군 간 length가 비슷해보인다."
    ]
   },
   {
@@ -791,7 +791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 시각화해봤을 때는 연구 시작 시점인 0에서 남성의 평균이 높아 보여 평균적으로 차이가 있어 보인다."
+    "- 시각화해봤을 때는 연구 시작 시점인 0(befroe treatment)에서 성별로 차이가 없어 보인다."
    ]
   },
   {
