--- a/_notebooks/2021-12-21-생통toe.ipynb
+++ b/_notebooks/2021-12-21-생통toe.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 생물통계학 기말 과제_toenail\n",
+    "# 생물통계학 기말 자료분석_toenail\n",
     "> tonail 데이터를 이용한 분석 \n",
     "\n",
     "- toc:true\n",
