--- a/_notebooks/2021-12-16-git.ipynb
+++ b/_notebooks/2021-12-16-git.ipynb
@@ -130,36 +130,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8de55001-c8b6-4114-a88e-db579364ed02",
+   "cell_type": "markdown",
+   "id": "3f7eaf6a-301d-4a5b-be98-60996afa4f9c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### git log"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70de65cf-4f92-44dc-a463-a23c819a1c69",
+   "cell_type": "markdown",
+   "id": "d193261a-6178-4a29-85f3-5306c4b1a8fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "ref: https://git-scm.com/docs/git-log"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e286351c-4aa1-40a6-a532-c451e246c35c",
+   "cell_type": "markdown",
+   "id": "7416d8e6-e344-4397-b8ed-d685bd341ae3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "ref: https://git-scm.com/book/ko/v2/Git%EC%9D%98-%EA%B8%B0%EC%B4%88-%EC%BB%A4%EB%B0%8B-%ED%9E%88%EC%8A%A4%ED%86%A0%EB%A6%AC-%EC%A1%B0%ED%9A%8C%ED%95%98%EA%B8%B0"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e75dc467-894b-4d05-9e6c-e82a74a7de76",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "c38e47cb-394c-4484-81c3-d7366ab9764a",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "- commit history를 조회하기 위한 명령어"
+   ]
   },
   {
    "cell_type": "code",
