--- a/_notebooks/2022-01-01-인공지능.ipynb
+++ b/_notebooks/2022-01-01-인공지능.ipynb
@@ -8,7 +8,7 @@
     "tags": []
    },
    "source": [
-    "# 1권만 끝남 야사와 만화로 배우는 인공지능\n",
+    "# 2권 끝 야사와 만화로 배우는 인공지능\n",
     "> 인공지능\n",
     "\n",
     "- toc:true\n",
@@ -268,61 +268,234 @@
    "cell_type": "markdown",
    "id": "6fca93a2-b607-4d7e-a10a-e3775791b45a",
    "metadata": {},
-   "source": []
+   "source": [
+    "존 매카시John McCarthy\n",
+    "- 인공지능AI 용어를 처음 사용(1955)한 존 매카시John McCarthy, MIT에서 LISP(AI 현언어) 개발(1958)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dce6b89-85dd-4836-8bd1-9bcc5b75e58c",
+   "metadata": {},
+   "source": [
+    "마빈 민스키Marvin Minsky\n",
+    "- 석사 과정때 SNARC(시행착오를 통해 학습할 수 있는 신경망 기계) 만듦"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "55327b81-527a-4c39-9655-4f53f1a257bd",
    "metadata": {},
-   "source": []
+   "source": [
+    "페이페이 리Fei-Fei Li\n",
+    "- IMGENET 대회 만듦 $\\rightarrow$ 여기서 제프리 힌튼의 슈퍼비전 팀이 딥러닝 기술로 압도적 우승"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93eb7031-dc22-49a1-9f72-2216362ac483",
+   "metadata": {},
+   "source": [
+    "제프 딘Jeff Dean\n",
+    "- 마빈 프로젝트에 참여(인간 뇌구조를 본 딴 신경망 연구) $\\rightarrow$ google brain으로 프로젝트 명 변경"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "b9511a26-7c4d-4b90-9e14-a8c4fddac370",
    "metadata": {},
-   "source": []
+   "source": [
+    "딥러닝의 Hello world! **MNIST**데이터 셋(Modified National Institute of Standards and Technology Database)\n",
+    "- 손으로 쓴 숫자로 이루어진 대형 데이터베이스\n",
+    "- NIST에서 1986년 손글씨 우편번호를 읽어 빠르게 분류할 수 있는 방법 고안\n",
+    "- 얀 레쿤의 CNN으로 분류 선공\n",
+    "- 고등학생들의 글씨인 NIST SD-1(Special Database)과 인구조사국 직원들의 글씨인 NIST SD-3로부터 데이터\n",
+    "    - 정규화, 표준화 보정 통해 MNIST 데이터 셋 생성\n",
+    "- 데이터가 핵심인 딥러닝에 큰 기여"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "f8266894-874c-4fe2-b64e-7cb44e956234",
    "metadata": {},
-   "source": []
+   "source": [
+    "신경망학회인 인공신경망학회 NIPS(Neural Information Processing Systems) \n",
+    "- https://nips.cc/\n",
+    "\n",
+    "국제 머신러닝학회 ICML(International Conference on Marchine Learning)\n",
+    "- https://icml.cc/"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "cc2ad730-36b9-485b-b59e-e8f78f828074",
    "metadata": {},
-   "source": []
+   "source": [
+    "회귀분석\n",
+    "- 평균으로의 회귀 성질이 있기 때문, 예측 가능 $\\rightarrow$ 프란시스 골턴Francis Galton이 고안\n",
+    "    - 여기 적용된 최소제곱법(가우스): 점과 점 사이를 지나는 선을 구할 때 각 점과 그 선 사이의 거리가 최소가 되는 선을 구하는 방법"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "b8a220a3-c504-4523-8683-2d3f6d8ff4fa",
    "metadata": {},
-   "source": []
+   "source": [
+    "머신러닝에서 지도학습의  분류classification\n",
+    "- 레이블이 있는 데이터로부터 모델을 만들어 새로운 데이터의 레이블을 예측하는 것"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "d3f6aa56-990c-44bf-83b0-3f7c268a2648",
    "metadata": {},
-   "source": []
+   "source": [
+    "비지도학습: 레이블이 없는 데이터 내부의 패턴과 구조를 발견하는 것"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c12be1b4-12a2-45ac-a110-99667604f6b9",
    "metadata": {},
-   "source": []
+   "source": [
+    "군집화: 비슷한 속성끼리 묶어주는 알고리즘"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "343d3c76-646d-4eb8-ad28-68598eb3e9a0",
    "metadata": {},
-   "source": []
+   "source": [
+    "K-means 알고리즘\n",
+    "- 주어진 데이터에서 찾아내고자 하는 k개 군집 결정\n",
+    "- 초기군집 결정 k개의 다른 포인트를 임의결정\n",
+    "- 각 데이터별로 k개의 초기군집까지 거리를 계산, 가장 가까운 거리에 있는 군집에 해당 데이터를 할당\n",
+    "- 할당이 끝나면 각 군집의 중앙위치를 구해(평균일수도, 중앙값일수도있음) 각 데이터 사이의 거리를 기반으로 다시 데이터를 군집에 할당\n",
+    "- 더 이상 할당된 군집의 중앙위치가 변하지 않을때까지 반복"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "d43c0d86-8583-4ec1-8c4e-6fbfd1810352",
    "metadata": {},
-   "source": []
+   "source": [
+    "비모수적: 모집단에 대한 정보없이 접근하는 방식"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e556965f-01cb-4c52-a233-39710cf60b60",
+   "metadata": {},
+   "source": [
+    "K-NN 알고리즘(K근접 이웃)\n",
+    "- 분류와 회귀를 사용한 비모수적 패턴 인식 방법 \n",
+    "- 에블린 픽스Evelyn Fix, 조셉 하지스 Joseph Lawson Hodges Jr."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0384473a-ea67-4156-b004-546729bff999",
+   "metadata": {},
+   "source": [
+    "나이브 베이지언\n",
+    "- 스팸메일이나 문서분류에 많이 쓰임 $\\rightarrow$ 베이즈 정리로부터 유도(경험적 확률론)\n",
+    "- 각각의 조건이 독립적이라고 가정하고 긴딘하게 계산하는 방식"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05c6acf4-735c-44b9-815f-eedf51f09e56",
+   "metadata": {},
+   "source": [
+    "SVM알고리즘\n",
+    "- 선형 SVM: 서로 다른 그룹을 구별할 수 있는 직선을 찾는데 이때 오분류의 정도를 조정하여 가장 크게 떼어놓을 수 있는 직선을 찾음\n",
+    "- 비선형 SVM: $f(x)=x^2$(커널이라 칭함)을 적용하여 직선에 있는 값들을 2차평면으로 변환하면 판단할 수 있는 선을 찾을 수 있음"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76e88834-d88f-4a55-a6f9-6124359c76e9",
+   "metadata": {},
+   "source": [
+    "얼헌트Earl B. Hunt의 CLS Cconcept learning system \n",
+    "- 모두 A의 요소이면 Positive\n",
+    "- 모두 A의 요소가 아니면 Negative\n",
+    "- 그렇지 않으면 부분집합을 만들어 다시 처음부터 수행"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22368fb3-77cf-4ed7-9e05-a13cfb4b383e",
+   "metadata": {},
+   "source": [
+    "로스퀀란Ross Quinlan의 의사결정 트리 알고리즘\n",
+    "- concept learning에 경험적 접근,\n",
+    "- 머신러닝 분야에서 널리 쓰이는 이유\n",
+    "    - 이해가 쉽고\n",
+    "    - 빠르게 배울 수 있고\n",
+    "    - 매우 정확(미세조정없이도)하기 떄문"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "511e9f1a-b962-4175-b07f-abfdbcfcea77",
+   "metadata": {},
+   "source": [
+    "랜덤포레스트(CART classification and regression trees알고리즘에서 발전)\n",
+    "- sample data 조정하여 정확성 높인 boosting 알고리즘 등장"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "669d3031-89ce-4f3b-9c1e-47a7e9c164e4",
+   "metadata": {},
+   "source": [
+    "SDL기업: RDBMS구현을 어셈블리어로 성공 $\\right$ 오라클 $\\right$ Rollback segment 기술(독보적!)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47e21861-4f03-4b22-a7cf-f7f9f021d240",
+   "metadata": {},
+   "source": [
+    "하둡Hadoop - 더그 커틴Doug Cutting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63f9e6d8-0e57-499d-a93c-00851b1a92bd",
+   "metadata": {},
+   "source": [
+    "R - 로스 이하카Ross Ihaka, 로버트 젠틀맨Robert Gentleman"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d336ae2b-2bba-427e-a032-30c7b8b884e1",
+   "metadata": {},
+   "source": [
+    "해들리 위컴Hadley Wickham\n",
+    "- Practical tools for exploring data and models(http://had.co.nz/thesis/practical-tools-hadley-wickham.pdf)\n",
+    "    - 데이터 전처리 위한 reshape\n",
+    "    - 시각화 위한 ggplot\n",
+    "- 데이터분석용패키지 tidyverse\n",
+    "- ggplot2는 리랜드 윌킨슨의 The grammar of graphics 시각화철학을 R로 구현"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6373d1d-c8ed-457a-bc8c-ae1a204c331f",
+   "metadata": {},
+   "source": [
+    "the website for “R for Data Science”\n",
+    "- https://r4ds.had.co.nz\n",
+    " the on-line version of work-in-progress 3rd edition of “ggplot2: elegant graphics for data analysis” published by Springer.\n",
+    "- https://ggplot2-book.org/\n",
+    " the website for 2nd edition of “Advanced R”,\n",
+    "- https://adv-r.hadley.nz/\n",
+    "R packages by Hadley Wickham and Jenny Bryan. \n",
+    "- https://r-pkgs.org/"
+   ]
   },
   {
    "cell_type": "markdown",
