--- a/_notebooks/2022-01-06-graph논문(guebin).ipynb
+++ b/_notebooks/2022-01-06-graph논문(guebin).ipynb
@@ -5,7 +5,7 @@
    "id": "54c2e513-ff1c-45b2-af2c-3f8de359c32e",
    "metadata": {},
    "source": [
-    "# The Emerging Field of Signal Processing on (2)\n",
+    "# The Emerging Field of Signal Processing on graph (2)\n",
     "> \n",
     "\n",
     "- toc:true\n",
@@ -20,7 +20,7 @@
    "id": "73eedb10-dfbb-47c6-8860-e497dfd546e7",
    "metadata": {},
    "source": [
-    "## The Emerging Field of Signal Processing on; \n",
+    "## The Emerging Field of Signal Processing on graph; \n",
     "- Extending High-Dimensional Data Analysis to Networks and Other Irregular Domains;"
    ]
   },
@@ -1848,7 +1848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
