--- a/_notebooks/2022-01-08-graph논문.ipynb
+++ b/_notebooks/2022-01-08-graph논문.ipynb
@@ -5,7 +5,7 @@
    "id": "54c2e513-ff1c-45b2-af2c-3f8de359c32e",
    "metadata": {},
    "source": [
-    "# The Emerging Field of Signal Processing on\n",
+    "# The Emerging Field of Signal Processing on Graph\n",
     "> \n",
     "\n",
     "- toc:true\n",
@@ -20,7 +20,7 @@
    "id": "73eedb10-dfbb-47c6-8860-e497dfd546e7",
    "metadata": {},
    "source": [
-    "## The Emerging Field of Signal Processing on; \n",
+    "## The Emerging Field of Signal Processing on Graph\n",
     "- Extending High-Dimensional Data Analysis to Networks and Other Irregular Domains;"
    ]
   },
