--- a/_notebooks/2022-01-05-AI_music.ipynb
+++ b/_notebooks/2022-01-05-AI_music.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c6a785f7-0a03-4316-90e5-9df83c4140c9",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# AI music\n",
+    "> \n",
+    "\n",
+    "- toc:true\n",
+    "- branch: master\n",
+    "- badges: true\n",
+    "- comments: false\n",
+    "- author: 최서연"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "34a6504b-389b-49f2-9ce4-d6cb60499933",
    "metadata": {},
    "source": []
