--- a/_notebooks/2022-01-08-graph논문.ipynb
+++ b/_notebooks/2022-01-08-graph논문.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "54c2e513-ff1c-45b2-af2c-3f8de359c32e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# The Emerging Field of Signal Processing on Graph\n",
     "> \n",
