--- a/_notebooks/2022-01-08-graph논문.ipynb
+++ b/_notebooks/2022-01-08-graph논문.ipynb
@@ -8,13 +8,14 @@
    },
    "source": [
     "# The Emerging Field of Signal Processing on Graph\n",
-    "> \n",
+    "> scholar review\n",
     "\n",
     "- toc:true\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: false\n",
-    "- author: 최서연"
+    "- author: 최서연\n",
+    "- categories: [review]"
    ]
   },
   {
@@ -401,7 +402,7 @@
    "id": "efd7a71e-8eb6-4ea8-9aaa-afd729b77a23",
    "metadata": {},
    "source": [
-    "- graph $G = \\left\\{V, E,W\\right\\}$\n",
+    "- graph ${\\cal G}:= \\{ {\\cal V},{\\cal E},\\bf{W} \\}$\n",
     "- a weighted adjacency matrix $W$\n",
     "- the entry $W_{i,j}$ represents the weight of the edge"
    ]
