--- a/_notebooks/2021-01-08-eigen.ipynb
+++ b/_notebooks/2021-01-08-eigen.ipynb
@@ -125,7 +125,8 @@
    "id": "82d6ee1f-75a1-45b8-bbda-7fefca88ccd6",
    "metadata": {},
    "source": [
-    "A is a Markov matrix(각 열 벡터들을 더하면 1이 되는 행렬). "
+    "**A is a Markov matrix(각 열 벡터들을 더하면 1이 되는 행렬).**\n",
+    "- Its eigenvector $x_l = (.6,.4)$ is the steady state-which all columns of Ak will approach."
    ]
   },
   {
@@ -137,11 +138,160 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d208868b-0b9c-4347-9965-c8288015bc1e",
+   "cell_type": "markdown",
+   "id": "62c3a2bd-86e5-4946-9072-07bf42b6917f",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "**The projection matrix $P=\\begin{bmatrix}{.5}&{.5}\\\\{.5}&{.5} \\end{bmatrix}$ has eigencalues $\\lambda=1$ and $\\lambda=0$**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da0573ab-f988-4639-9232-193bacd9df05",
+   "metadata": {},
+   "source": [
+    "위 예는 markov matrices, singular matrices, 그리고 symmetric matrices를 설명한다.\n",
+    "- All have special A's and x 's: \n",
+    "    - $P=\\begin{bmatrix}{.5}&{.5}\\\\{.5}&{.5} \\end{bmatrix}$의 각 열은 1을 추가해서 람다=1이 고유값\n",
+    "    - P는 singular여서 람다=0이 고유값\n",
+    "    - P는 대칭이어서 고유벡터(1,1)과 (1,-1)이 직각"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2ef27ab-0e53-45d7-a2ff-72ee3ba02368",
+   "metadata": {},
+   "source": [
+    "- 영공간nullspace는 0에 투영되어있음\n",
+    "- 열 공간은 그 스스로를 투영함\n",
+    "- Project each aprt $v=\\begin{bmatrix}{1}&{-1}\\\\{2}&{2} \\end{bmatrix}$ projects onto $P_v=\\begin{bmatrix}{0}&{0}\\\\{2}&{2} \\end{bmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8eff78f-00c7-49b8-9314-017104d68a7d",
+   "metadata": {},
+   "source": [
+    "- Projections have $\\lambda = 0$ and $1$. Permutations have all $|A| = 1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "761e7a1d-4840-46bc-9044-0e540b215800",
+   "metadata": {},
+   "source": [
+    "##### ex3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96412ed9-f939-4cc0-af6f-1094882176df",
+   "metadata": {},
+   "source": [
+    "**The reflection matrix $R=\\begin{bmatrix}{0}&{1}\\\\{1}&{0} \\end{bmatrix}$ has eigenvalues 1 snd -1**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5acc3e95-fe59-4316-a8fc-c6cbc9253a54",
+   "metadata": {},
+   "source": [
+    "- 고유벡터(1,1)은 R에 의해 변하지 않음!\n",
+    "- $reflection = 2(projection)-I$ 때문에 R에서 고유벡터은 P에서와 같다.\n",
+    "- $R=2P-I, \\begin{bmatrix}{0}&{1}\\\\{1}&{0} \\end{bmatrix}=2\\begin{bmatrix}{.5}&{.5}\\\\{.5}&{.5} \\end{bmatrix}-\\begin{bmatrix}{1}&{0}\\\\{0}&{1} \\end{bmatrix}.\\dots (2)$\n",
+    "- $2Px=2\\lambda x$처럼 행렬이 두 배가 되면 고유값이 2배가 된다.\n",
+    "- 그 결과가 $(2p-i)X=(2\\lambda-1)x$!!\n",
+    "- 행렬이 I에 의해 변하면 각 $\\lambda$는 1에 의해 바뀐다. 고유벡터 내에서는 변화 없음!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2c295b2-8755-494e-91cf-710fb32a814c",
+   "metadata": {},
+   "source": [
+    "Key idea: The eigenvalues of Rand P are related exactly as the matrices are related:\n",
+    "- The eigenvalues of $R = 2P - I$ are 2(1) - 1 = 1 and 2(0) - 1 = -1. \n",
+    "- The eigenvalues of $R^2$ are $\\lambda^2$. In this case $R^2 = I$. Check $(I)^2$ = 1 and $(-1)^2$ = 1. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ec3091f-2ca7-4080-9f38-38027db9fc38",
+   "metadata": {},
+   "source": [
+    "> note: The Equation for the Eigenvalues: $P x = x, P x = 0, Rx = -x$ is the key caculation almost every application starts by solving $Ax = \\lambda x$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acaa4e25-d5b3-4930-a4df-812de7e75fba",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cff8c3d-4ad4-431f-b92e-39651ee84b65",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4d2e6fa-dfe3-4ea0-abcb-010f3b0b6641",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9541b5f-cfe9-4e28-b652-71cc2160e837",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1cbdc8a-3b5a-4b9a-b662-009fc91356c1",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b2c6f55-0757-4de8-a264-d03e73e90354",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d300315-c521-425a-be06-1e08b0eb416b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21994773-83ce-464e-a968-1511bb66d758",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf3c808e-c2b6-4bb9-bed4-b5c3fb65d2c7",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01368500-a26a-4c93-b8b6-5e87f201ac60",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db2775e1-7def-4581-b755-17123a236cce",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb07d3d4-ecb3-4f51-823b-57f77c738d66",
+   "metadata": {},
    "source": []
   }
  ],
