--- a/_notebooks/2022-01-08-eigen.ipynb
+++ b/_notebooks/2022-01-08-eigen.ipynb
@@ -75,7 +75,7 @@
    "id": "7b835a6d-8830-4f6b-bec1-9805890e7e77",
    "metadata": {},
    "source": [
-    "##### ex 1)"
+    "##### ex1)"
    ]
   },
   {
@@ -219,44 +219,72 @@
    "id": "2ec3091f-2ca7-4080-9f38-38027db9fc38",
    "metadata": {},
    "source": [
-    "> note: The Equation for the Eigenvalues: $P x = x, P x = 0, Rx = -x$ is the key caculation almost every application starts by solving $Ax = \\lambda x$. "
+    "The Equation for the Eigenvalues: $P x = x, P x = 0, Rx = -x$ is the key caculation almost every application starts by solving $Ax = \\lambda x$. \n",
+    "- 일단 $\\lambda x$를 왼쪽으로 넘기면 $(A-\\lambda I)x=0$을 쓸 수 있고\n",
+    "- 행렬 $(A-\\lambda I)$매를 한 고유벡터 x는 0 벡터임.\n",
+    "- **The eigenvectors make up the nullspace of $A - \\lambda I$**\n",
+    "- 고유값 람다를 알때, $(A-\\lambda I)x=0$을 풀어서 고유벡터를 찾을 수 있음"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "acaa4e25-d5b3-4930-a4df-812de7e75fba",
    "metadata": {},
-   "source": []
+   "source": [
+    "If $(A - \\lambda I)X = 0$ has a nonzero solution, $A - \\lambda I$ is not invertible. The determinant of $A -\\lambda I$ must be zero. \n",
+    "- 고유값 람다 알아내는 법\n",
+    "    - **The number $\\lambda$ is an eignvalue of A if and only if $A-\\lambda I$ is singular:**\n",
+    "    - Equtation for the eigenvalues $\\rightarrow det(A-\\lambda I)=0$\n",
+    "        - $det(A-\\lambda I)=0$ 여기에는 x가 아닌 람다만 들어있음\n",
+    "        - A가 N $\\times$ N 행렬일때 $det(A-\\lambda I)=0$는 degree N을 가지게 됨"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "5cff8c3d-4ad4-431f-b92e-39651ee84b65",
    "metadata": {},
-   "source": []
+   "source": [
+    "> For each elgenvalue $\\lambda$ solve $(A - \\lambda I)x = 0$ or $A_x=\\lambda x$ to find an eigenvector x."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c4d2e6fa-dfe3-4ea0-abcb-010f3b0b6641",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex4)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "f9541b5f-cfe9-4e28-b652-71cc2160e837",
    "metadata": {},
-   "source": []
+   "source": [
+    "$A=\\begin{bmatrix}{1}&{2}\\\\{2}&{4} \\end{bmatrix}$ is already singular (zero determinant). Find its $\\lambda$'s and $x$'s"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c1cbdc8a-3b5a-4b9a-b662-009fc91356c1",
    "metadata": {},
-   "source": []
+   "source": [
+    "- A가 singular일때 $\\lambda=0$은 고유값들 중 하나이다.\n",
+    "- $Ax=0x$가 solution을 가짐! 이는 $\\lambda=0$에 대한 고유 벡터임\n",
+    "- 하지만 $det(A-\\lambda I)=0$은 모든 람다들과 x들을 찾는 방법임\n",
+    "- **Subtract $\\lambda$ from the diagonal to find $a-\\lambda i =\\begin{bmatrix}{1-\\lambda}&{2}\\\\{2}&{4-\\lambda} \\end{bmatrix}$**"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "6b2c6f55-0757-4de8-a264-d03e73e90354",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Take the determinant \"ad - bc\" of this 2 by 2 matrix.**\n",
+    "- $det\\begin{bmatrix}{1-\\lambda}&{2}\\\\{2}&{4-\\lambda} \\end{bmatrix}=(1-\\lambda)(4-\\lambda)-(2)(2)=\\lambda^{2}-5\\lambda$\n",
+    "- $\\lambda^{2}-5\\lambda$를 0으로 놓으면 근은 람다가 0 또는 5\n",
+    "- One solution is $\\lambda = 0$ (as expected, since A is singular). Factoring into $\\lambda$ times $\\lambda - 5$, the other root is $\\lambda = 5$.:\n",
+    "- $det(a$"
+   ]
   },
   {
    "cell_type": "markdown",
